<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:textAlignment="center">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/dark_green"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="232dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/natur_brandenburg_final" />


    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="12dp"
        android:text="@string/AboutTitle"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/aboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutTitle"
        android:padding="2dp"
        android:text="@string/About_text" />

    <TextView
        android:id="@+id/KeyFeaturesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutText"
        android:padding="5dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/KeyFeaturesTitle"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/KeyFeaturesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/KeyFeaturesTitle"
        android:padding="5dp"
        android:text="@string/KeyF_text" />

    <TextView
        android:id="@+id/SourcesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/KeyFeaturesText"
        android:padding="5dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/SourcesTitle"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/SourcesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SourcesTitle"
        android:padding="5dp"
        android:text="@string/SourcesText" />


    <!-- Title and Lorem for 'creditsText' -->
    <TextView
        android:id="@+id/creditsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SourcesText"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/CreditsTitle"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/creditsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/creditsTitle"
        android:padding="5dp"
        android:text="@string/Credits_text"
        android:layout_marginBottom="16dp"/>


</RelativeLayout>
