<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:layout_alignParentBottom="true"
    android:background="@color/transparent"
    android:focusable="auto"
    android:focusableInTouchMode="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:background="@android:color/transparent"
        android:clipToPadding="true"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_green"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/howto_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/averiaseriflibre_regular"
                android:freezesText="true"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="How To Use the App">

            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#3B5500"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:contentPadding="3dp">

                <ImageView
                    android:id="@+id/howto1_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/howto_list4">

                </ImageView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/howto1_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averiaseriflibre_regular"
                android:inputType="textMultiLine"
                android:lineSpacingExtra="8sp"
                android:paddingVertical="20dp"
                android:paddingHorizontal="30dp"
                android:paddingBottom="1dp"
                android:text="@string/Howto_text1"
                android:textColor="@color/white"
                android:textSize="16sp">
            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="#3B5500"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:contentPadding="3dp">

                <ImageView
                    android:id="@+id/howto2_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/howto_list1">

                </ImageView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/howto2_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averiaseriflibre_regular"
                android:inputType="textMultiLine"
                android:lineSpacingExtra="8sp"
                android:paddingVertical="20dp"
                android:paddingHorizontal="30dp"
                android:paddingBottom="1dp"
                android:text="@string/Howto_text2"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="#3B5500"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:contentPadding="3dp">

                <ImageView
                    android:id="@+id/howto3_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/howto_list2">

                </ImageView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/howto3_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averiaseriflibre_regular"
                android:inputType="textMultiLine"
                android:lineSpacingExtra="8sp"
                android:paddingVertical="20dp"
                android:paddingHorizontal="30dp"
                android:paddingBottom="1dp"
                android:text="@string/Howto_text3"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>